--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.5",
+    "prettier": "2.5.1",
     "tailwindcss": "^3.0.12",
     "vite": "^2.7.2"
   }
