--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "ip-web",
   "version": "0.0.0",
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky install"
   },
   "dependencies": {
     "vue": "^3.2.25",
@@ -14,6 +18,8 @@
     "@vitejs/plugin-vue": "^2.0.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "autoprefixer": "^10.4.2",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.1.7",
     "postcss": "^8.4.5",
     "prettier": "2.5.1",
     "tailwindcss": "^3.0.12",
