--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "axios": "^0.24.0",
     "eslint-config-prettier": "^8.3.0",
     "js-cookie": "^3.0.1",
+    "pinia": "^2.0.9",
     "vue": "^3.2.25",
-    "vue-router": "4",
-    "vuex": "^4.0.2"
+    "vue-router": "4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.0.0",
