--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "js-cookie": "^3.0.1",
     "pinia": "^2.0.9",
     "vue": "^3.2.25",
-    "vue-router": "4"
+    "vue-router": "4",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.0.0",
