--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^3.7.0",
     "eslint-config-prettier": "^8.3.0",
     "js-cookie": "^3.0.1",
+    "moment": "^2.29.1",
     "pinia": "^2.0.9",
     "vue": "^3.2.25",
     "vue-chart-3": "^3.0.7",
